shorten code by default methods in lib